# SistemaWebGleyforGym

./: AGENTS.md  GUIA_EXAMEN.md  README.md  render.yaml
backend/: .env.example  AGENTS.md  README.md  add_ignores.py  pyproject.toml  requirements.txt
backend/src/: main.py
backend/src/apis/: asistencia.py  auth.py  cliente.py  dashboard.py  entrenador.py  membresia.py  objetivo.py  pago.py  progreso.py  rutina.py  usuario.py
backend/src/core/: config.py  exceptions.py  security.py
backend/src/database/: connection.py  models.py  recreate_db.py  schema.sql  seed.py
backend/src/repository/: asistencia_repository.py  cliente_repository.py  entrenador_repository.py  especialidad_repository.py  grupo_muscular_repository.py  membresia_repository.py  objetivo_repository.py  pago_repository.py  progreso_repository.py  rutina_repository.py  usuario_repository.py
backend/src/schemas/: asistencia.py  auth.py  cliente.py  entrenador.py  especialidad.py  grupo_muscular.py  membresia.py  objetivo.py  pago.py  progreso.py  rutina.py  usuario.py
backend/src/services/: asistencia_service.py  auth_service.py  cliente_service.py  entrenador_service.py  membresia_service.py  pago_service.py  progreso_service.py  rutina_service.py  usuario_service.py
gleyforgym-frontend/: README.md  angular.json  package-lock.json  package.json  serve-static.js
gleyforgym-frontend/src/: index.html  styles.css
gleyforgym-frontend/src/app/: app.config.ts  app.routes.server.ts  app.routes.ts  app.spec.ts  app.ts
gleyforgym-frontend/src/environments/: environment.prod.ts  environment.ts
(+118 files in other folders)
